crates/fig-parser/tests/snapshots/integration_tests__edge_cases__nested_structs.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Inner
      generic_params: []
      requires: []
      fields:
        - name: x
          ty: I32
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Outer
      generic_params: []
      requires: []
      fields:
        - name: inner
          ty:
            Path:
              path:
                segments:
                  - Inner
              generic_args: []
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - DeepNest
      generic_params: []
      requires: []
      fields:
        - name: outer
          ty:
            Path:
              path:
                segments:
                  - Outer
              generic_args: []
          visibility: Default
          annotations: []
