crates/fig-parser/tests/snapshots/integration_tests__edge_cases__zero_literals.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: zeros
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: iz
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "0"
                  suffix: ~
          - Let:
              annotations: []
              name: fz
              ty: ~
              value:
                FloatLiteral:
                  digits: "0.0"
                  exponent: ~
                  suffix: ~
          - Let:
              annotations: []
              name: one
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "1"
                  suffix: ~
          - Let:
              annotations: []
              name: neg_in_expr
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
                  op: Subtract
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "1"
                      suffix: ~
          - Let:
              annotations: []
              name: fone
              ty: ~
              value:
                FloatLiteral:
                  digits: "1.0"
                  exponent: ~
                  suffix: ~
          - Pass
